--- a/_posts/0000-01-02-helenana1503.md
+++ b/_posts/0000-01-02-helenana1503.md
@@ -2,5 +2,6 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+![This is an image](https://th.bing.com/th/id/OIP.QyZZbLeYB2GpeFeWEEjV2QHaHa?pid=ImgDet&rs=1)
+
 Use the left arrow to go back!
